# faust-external-processing

./: CMakeLists.txt  README.md
cmake/: install-rules.cmake
source/: dsp.hpp  faust_arch.cpp  lib.cpp  lib.hpp  main.cpp  mydsp1.dsp  sstfx.hpp
